--- a/notes/20190106.md
+++ b/notes/20190106.md
@@ -20,3 +20,9 @@ vue
     model 绑定 view
     没有控制器的概念
     数据驱动、状态管理
+
+核心思想
+    数据驱动
+    组件化
+    通过mvvm的数据绑定实现自动同步
+        view -- view model -- model
